# zsn-common-lib

./: .gitignore  Cargo.toml  LICENSE  README.md
.fso-amem/: project.toml
crates/cryptographic-identity/: Cargo.toml  README.md
crates/cryptographic-identity/src/: errors.rs  lib.rs
crates/cryptographic-identity/src/mnemonic/: mod.rs  words.rs
crates/logging/: Cargo.toml  README.md
crates/logging/src/: lib.rs
resources/test-utils/: cargo-no-std-check
