[workspace.package]
authors = [
    "BambooLabs Foundation <https://github.com/bamboolabs-foundation>",
    "Aditya Kresna <aditya.kresna@outlook.co.id>",
]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/bamboolabs-foundation/zsn-common-lib"
version = "0.1.0"

[workspace]
resolver = "2"
members = ["crates/logging"]

[patch.crates-io]
ss58-registry = { git = "https://github.com/bamboolabs-foundation/ss58-registry", rev = "d9f85a4" }

[workspace.dependencies]
env_logger = "0.10.0"
gloo-console = "0.3.0"
log = { version = "0.4.20", default-features = false, features = [
    "max_level_debug",
    "release_max_level_info",
    "serde",
] }
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
ss58-registry = { git = "https://github.com/bamboolabs-foundation/ss58-registry", rev = "d9f85a4", default-features = false }
